--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,7 +1,7 @@
 /* Section 1 */
 
 .home_section_1 {
-  background-color: rgb(206, 179, 203);
+  background-color: #885f83;
   padding: 50px 0px;
 }
 .home_sec_1_flex {
@@ -21,7 +21,7 @@
 }
 .home_sec_1_flex_col2 {
   position: absolute;
-  background-color: rgb(156, 105, 152);
+  background-color: rgb(83, 46, 80);
   right: 0px;
   top: 20%;
   width: 400px;
@@ -70,7 +70,7 @@
 .home_sec_2_flex_content {
   text-align: left;
   padding: 30px 20px;
-  background-color: rgb(206, 179, 203);
+  background-color: rgb(122 69 116);
 }
 .home_sec_2_flex_content h2 {
   font-family: "Cormorant Garamond", sans-serif;
@@ -88,7 +88,7 @@
 /* section 3  */
 
 .home_section_3 {
-  background-color: #c9afc6;
+  background-color: #885f83;
   padding: 50px 0;
 }
 
@@ -116,7 +116,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: rgb(176, 142, 173);
+  background-color: rgb(83, 46, 80);
   color: white;
   z-index: 1;
   padding: 30px;
@@ -143,7 +143,7 @@
   border-bottom: 1px solid rgb(176, 142, 173);
 }
 .home_section_4_grid_col .boldpara {
-  color: #c9afc6;
+  color: rgb(83, 46, 80);
 }
 
 /* section 5 */
@@ -155,7 +155,7 @@
 .container .section_5_heading {
   font-family: Roboto, sans-serif;
   font-size: 14px;
-  color: #c9afc6;
+  color: rgb(83, 46, 80);
   font-weight: 700;
   text-transform: uppercase;
   margin-bottom: 20px;
@@ -189,7 +189,7 @@
 .section_6_home {
   padding-top: 100px;
   padding-bottom: 100px;
-  background-color: #c9afc6;
+  background-color: rgb(122 69 116);
 }
 .section_6_home .container {
   max-width: 1000px;
@@ -205,7 +205,7 @@
   flex-direction: column;
 }
 .section_6_home_grid .bold_para {
-  color: #016274;
+  color: #8ce6f7;
   font-size: 14px;
   margin: 0;
   font-weight: 700;
